Added search api for id generation and refactored the code